metadata/force-app/main/default/objects/CustomName_Afmxp__c/CustomName_Afmxp__c.object-meta.xml
<CustomObject>
    <description>Description_MssQH</description>
    <label>CustomLabel_uwymw</label>
    <nameField>
        <label>CustomLabel_uwymw</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_uwymws</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>