metadata/force-app/main/default/objects/CustomName_Afmxp__c/fields/CustomField_EZvsd__c.field-meta.xml
<CustomField>
    <fullName>CustomField_EZvsd__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldppcRl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>