metadata/force-app/main/default/objects/CustomName_Afmxp__c/fields/CustomField_MnlJV__c.field-meta.xml
<CustomField>
    <fullName>CustomField_MnlJV__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldibEmv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>